--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,5 +1,6 @@
 .img-carousel{
     width: 100%;
-    height: 300px;
+    height: 700px;
     object-fit: cover;
+    /* transform: translate(0, -45px); */
 }
