--- a/css/navbar.css
+++ b/css/navbar.css
@@ -4,3 +4,16 @@
 .dropdown-menu{
     background-color: #071745;
 }
+.logo-disto{
+    margin-top: 5px;
+    width: 250px;
+    height: 100px;
+    object-fit: cover;
+    image-rendering: optimizeQuality;
+}
+html, body{
+    background-color: #071745;
+    font-family: EuclidCircularB,-apple-system,BlinkMacSystemFont,Helvetica,Arial;
+    -webkit-font-smoothing: antialiased;
+    
+}
