--- a/css/navbar.css
+++ b/css/navbar.css
@@ -15,5 +15,11 @@ html, body{
     background-color: #071745;
     font-family: EuclidCircularB,-apple-system,BlinkMacSystemFont,Helvetica,Arial;
     -webkit-font-smoothing: antialiased;
-    
+}
+
+.logo-navbar-offcanvas{
+    width: 150px;
+    height: 150px;
+    /* object-fit: cover; */
+    image-rendering: optimizeQuality;
 }
