--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,12 @@
   box-sizing: border-box;
 }
 
+.equal-image {
+  max-width: 100%;
+  height: auto;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
